backstage/plugins/kubernetes-backend/examples/dice-roller/metrics-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: metrics-server
 namespace: kube-system
 labels:
 k8s-app: metrics-server
spec:
 selector:
 matchLabels:
 k8s-app: metrics-server
 template:
 metadata:
 name: metrics-server
 labels:
 k8s-app: metrics-server
 spec:
 serviceAccountName: metrics-server
 volumes:
 # mount in tmp so we can safely use from-scratch images and/or read-only containers
 - name: tmp-dir
 emptyDir: {}
 containers:
 - name: metrics-server
 image: registry.k8s.io/metrics-server-amd64:v0.3.1
 args:
 - --kubelet-insecure-tls
 - --kubelet-preferred-address-types=InternalIP
 imagePullPolicy: Always
 volumeMounts:
 - name: tmp-dir
 mountPath: /tmp

---
apiVersion: v1
kind: Service
metadata:
 name: metrics-server
 namespace: kube-system
 labels:
 kubernetes.io/name: 'Metrics-server'
spec:
 selector:
 k8s-app: metrics-server
 ports:
 - port: 443
 protocol: TCP
 targetPort: 443
